# api-interview

./: .gitignore  README.md
client/: README.md  __init__.py  client.py  example_query.py  graphql_example.py  loan_schema.py  main.py  pyproject.toml
server/: .gitignore  Cargo.toml  README.md
server/src/: graphql.rs  loan.rs  main.rs  result.rs  web.rs
